@@ -86,6 +86,7 @@ public:
 					// Call desired function.
 	virtual int call_usecode(int id, Game_object *obj, 
 						Usecode_events event) = 0;
+	virtual int find_function(const char *nm) = 0;
 	virtual void write() = 0;	// Write out 'gamedat/usecode.dat'.
 	virtual void read() = 0;	// Read in 'gamedat/usecode.dat'.
 
