@@ -1,3 +1,8 @@
+2006-03-05    <jeff@mini.nerble.net>
+
+	* objs/egg.cc,etc.: Usecode eggs may be given a function name
+	instead of a number.
+
 2006-02-28  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Tweaked speed of 'Talk' schedule a bit. Also, modified 'Pace horizontal'
 	  and 'Pace vertical' schedules to better match original games.
